--- a/_config.yml
+++ b/_config.yml
@@ -70,8 +70,8 @@ JB :
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change theme here if needed.
   #
-  archive_path: /history.html
-  # categories_path : /categories.html
+  activities_path: /activities.html
+  material_path : /material.md
   # tags_path : /tags.html
 
   # Settings for comments helper
